--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -226,107 +226,110 @@
   }
 }
 
-/* .page-header {
-  border-bottom: 1px;
-  border-bottom: 1px solid #e7e9fc;
-  padding-left: 15px;
-  padding-right: 15px;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
+@media screen and (min-width: 1158px) {
+  .page-header {
+    border-bottom: 1px;
+    border-bottom: 1px solid #e7e9fc;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  }
 
-.nav-container {
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  position: relative;
-}
+  .nav-container {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    position: relative;
+  }
 
-.logo-link {
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  margin-right: 76px;
-  text-transform: uppercase;
-  color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  .logo-link {
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin-right: 76px;
+    text-transform: uppercase;
+    /* color: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.logo-icon {
-  color: #2e2f42;
-}
+  .logo-icon {
+    color: #2e2f42;
+  }
 
-.nav-link {
-  display: block;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  padding: 24px 0;
-}
+  .nav-link {
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding: 24px 0;
+  }
 
-.contacts-nav-active {
-  position: relative;
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-link-active {
-  position: relative;
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  .contacts-nav-active {
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-link-active {
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.nav-link-active::after {
-  display: block;
-  width: 100%;
-  height: 4px;
-  margin-left: auto;
-  margin-right: auto;
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
+  .nav-link-active::after {
+    display: block;
+    width: 100%;
+    height: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    background-color: #404bbf;
+    border-radius: 2px;
+  }
 
-.link-after {
-  color: rgba(64, 75, 191, 1);
-}
+  .link-after {
+    color: rgba(64, 75, 191, 1);
+  }
 
-.address-link {
-  display: block;
-  padding: 24px 0;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-  color: #434455;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  .address-link {
+    display: block;
+    padding: 24px 0;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.contacts-nav {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
+  .contacts-nav {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
 
-.page-header-nav {
-  display: flex;
-  align-items: center;
-}
+  .page-header-nav {
+    display: flex;
+    align-items: center;
+  }
 
-.address-link-item {
-  display: flex;
-  align-items: last baseline;
-  gap: 40px;
-}
+  .address-link-item {
+    display: flex;
+    flex-direction: row;
+    align-items: last baseline;
+    gap: 40px;
+  }
 
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-} */
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+}
