--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,5 @@
 /* LAYOUT */
 @import "./layout/header.css";
 @import "./layout/hero.css";
+@import "./layout/section.css";
+@import "./layout/ourteam.css";
