--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -3,4 +3,10 @@
   --pressed-state: #404bbf;
   --dark: #2e2f42;
   --success: #31d0aa;
+  --SLATE: #434455;
+  --LIGHT-SLATE: #8e8f99;
+  --CORNFLOWER: #e7e9fc;
+  --CLOUD: #f4f4fd;
+  --NAVY-BLUE-modal: #2e2f4266;
+  --GREY: #2e2f42b2;
 }
