--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -9,12 +9,11 @@
   .title-hero {
     margin: 0 auto;
     background-color: #2e2f42;
-    background-size: 320px 432px;
     background-image: url("../images/dark-mobil.jpg"),
       linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover, 320px 432px;
   }
 
   .title-container {
