--- a/css/layout/section.css
+++ b/css/layout/section.css
@@ -27,7 +27,7 @@
     color: var(--SLATE, #434455);
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.5; /* 150% */
+    line-height: 1.5;
     letter-spacing: 0.02em;
     margin-top: 8px;
     margin-bottom: 36px;
