--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,4 @@
 @import "./layout/section.css";
 @import "./layout/ourteam.css";
 @import "./layout/portfolio.css";
+@import "./layout/footer.css";
