--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -1,19 +1,39 @@
-/* @media screen and (max-resolution: 192gpi) and (min-width: 767px),
-  screen and (max-resolution: 2dppx) and (min-width: 767px),
-  screen and (max-devise-pixel-ratio: 2) and (min-width: 767px) {
+@media screen and (max-resolution: 192gpi) and (min-width: 1158px),
+  screen and (max-resolution: 2dppx) and (min-width: 1158px),
+  screen and (max-devise-pixel-ratio: 2) and (min-width: 1158px) {
   .title-hero {
-    background-image: url("./images/dark-mobil@2x.jpg");
-  } */
+    background-image: url("../../images/people-office-desktop@2x.jpg");
+  }
+}
+
+@media screen and (max-resolution: 192gpi) and (min-width: 768px),
+  screen and (max-resolution: 2dppx) and (min-width: 768px),
+  screen and (max-devise-pixel-ratio: 2) and (min-width: 768px) {
+  .title-hero {
+    background-image: url("../../images/dark-tabl@2x.jpg");
+  }
+}
+
+@media screen and (max-resolution: 192gpi) and (max-width: 767px),
+  screen and (max-resolution: 2dppx) and (max-width: 767px),
+  screen and (max-devise-pixel-ratio: 2) and (max-width: 767px) {
+  .title-hero {
+    background-image: url("../../images/dark-mobil@2x.jpg");
+  }
+}
 
 @media screen and (max-width: 767px) {
   .title-hero {
     margin: 0 auto;
     background-color: #2e2f42;
-    background-image: url("../images/dark-mobil.jpg"),
-      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../../images/dark-mobil.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover, 320px 432px;
+    background-size: cover;
   }
 
   .title-container {
@@ -66,7 +86,7 @@
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url("../imagges/dark-tabl.jpg");
+      url("../../images/dark-tabl.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -126,8 +146,11 @@
     margin: 0 auto;
     flex-shrink: 0;
     background: #2e2f42;
-    background-image: url(../images/people.jpg),
-      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../../images/people.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
