--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,4 @@
 @import "./layout/ourteam.css";
 @import "./layout/portfolio.css";
 @import "./layout/footer.css";
+@import "./layout/backdrop.css";
