--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -128,7 +128,7 @@
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 72px;
-    justify-content: center;
+    padding-left: 108px;
   }
   .logo-link-too {
     display: inline-block;
@@ -235,9 +235,6 @@
     line-height: 1.5;
     letter-spacing: 0.04em;
     cursor: pointer;
-  }
-  .footer-form {
-    min-width: 453px;
   }
   .footer-form-email {
     display: flex;
