--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -12,7 +12,6 @@
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: #4d5ae5;
-    margin-right: 76px;
     margin-bottom: 16px;
     text-transform: uppercase;
     text-decoration: none;
@@ -131,7 +130,7 @@
     visibility: hidden;
     pointer-events: none;
   }
-  .backdrop {
+  .backdrop.is-open {
     opacity: 1;
     visibility: visible;
   }
@@ -142,13 +141,192 @@
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 584px;
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
     border-radius: 4px;
     background-color: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     flex-shrink: 0;
+  }
+  .close-button-modal {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 0;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    border-radius: 50%;
+    border: 1px solid #0000001a;
+    fill: #2e2f42;
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .close-button-modal:hover,
+  .close-button-modal:focus {
+    fill: #ffffff;
+    background-color: #404bbf;
+    border: none;
+  }
+  .close-icon-modal {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .modal-form-page {
+    color: #2e2f42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+  }
+  .form-label {
+    margin-bottom: 8px;
+  }
+
+  .modal-form {
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .modal-form:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+  }
+  .modal-form-list {
+    display: block;
+    color: #8e8f99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    margin-bottom: 4px;
+  }
+  .input-icon {
+    position: relative;
+  }
+
+  .icon-form {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .form-label-texteria {
+    margin-bottom: 16px;
+  }
+
+  .comment-modal-form {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17; /* 116.667% */
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .comment-modal-form:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+  }
+
+  .comment-modal-form::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+  }
+  .checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
+  }
+  .modal-checkbox {
+    margin-bottom: 24px;
+  }
+
+  .checkbox-form-label {
+    color: #8e8f99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+
+  .checkbox-text {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+  }
+  .modal-checkbox-link {
+    color: #4d5ae5;
+  }
+
+  .modal-checkbox-form:checked + .checkbox-form-label > .checkbox-text {
+    border: none;
+    background-color: #404bbf;
+    fill: #f4f4fd;
+  }
+
+  .modal-checkbox-link:focus {
+    color: #404bbf;
+  }
+
+  .button-modal-form-send {
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(50%);
+  }
+  .button-modal-modil-send {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -303,7 +481,7 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     flex-shrink: 0;
   }
-  .backdrop {
+  .backdrop.is-open {
     opacity: 1;
     visibility: visible;
   }
@@ -595,7 +773,7 @@
   }
 
   .footer-form {
-    padding-left: 80px;
+    margin-left: auto;
   }
 
   .form-input-email {
@@ -658,7 +836,7 @@
     visibility: hidden;
     pointer-events: none;
   }
-  .backdrop {
+  .backdrop.is-open {
     opacity: 1;
     visibility: visible;
   }
@@ -668,7 +846,7 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
-    min-height: 584px;
+    max-height: 584px;
     padding: 72px 24px 24px 24px;
     border-radius: 4px;
     background-color: #fcfcfc;
