--- a/css/layout/hero.css
+++ b/css/layout/hero.css
@@ -65,6 +65,7 @@
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    border: none;
     border-radius: 4px;
     background: var(--primary-brand);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -81,7 +82,6 @@
     max-width: 767px;
     margin: 0 auto;
     background-color: #2e2f42;
-    background-size: 320px 432px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
